# AlgoMathProgProjekt

./: CMakeLists.txt
Instanzen_Linux/: instanz01.txt  instanz02.txt  instanz03.txt  instanz04.txt  instanz05.txt  instanz06.txt  instanz07.txt  instanz08.txt
Instanzen_Windows/: instanz01.txt  instanz02.txt  instanz03.txt  instanz04.txt  instanz05.txt  instanz06.txt  instanz07.txt  instanz08.txt
inc/: sorting.hpp
src/: heap.cpp  insertion.cpp  main.cpp  quick.cpp  readFile.cpp
